--- a/Yaml/Properties/launchSettings.json
+++ b/Yaml/Properties/launchSettings.json
@@ -21,7 +21,7 @@
     "https": {
       "commandName": "Project",
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:7065;http://localhost:5193",
+      "applicationUrl": "http://localhost:5193",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
