Test Deployment function

--- a/Yaml/appsettings.Development.json
+++ b/Yaml/appsettings.Development.json
@@ -4,5 +4,12 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "Azure": {
+    "ClientId": "client1",
+    "ClientSecret": "Secret",
+    "TenantId": "1bf2b880-115d-4e08-a258-aa1dc41dc0d5",
+    "SubscriptionId": "a849fbfa-c9d9-4fe3-b47f-60a4fa01253a",
+    "ManageId": "ce39c546-18a5-4362-a4ab-8c5a6ee6e8a9"
   }
 }
