--- a/Yaml/appsettings.json
+++ b/Yaml/appsettings.json
@@ -11,6 +11,12 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "server=localhost;database=yaml;user=root;password=5545125p"
+  },
+  "Azure": {
+    "ClientId": "client1",
+    "ClientSecret": "Secret",
+    "TenantId": "TenantID",
+    "SubscriptionId": "S1"
   }
 }
 
