--- a/Yaml/Yaml.csproj
+++ b/Yaml/Yaml.csproj
@@ -17,6 +17,8 @@
         <PackageReference Include="KubernetesClient" Version="12.1.1" />
         <PackageReference Include="MediatR" Version="12.1.1" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.11" />
+        <PackageReference Include="Microsoft.Azure.Management.Fluent" Version="1.38.1" />
+        <PackageReference Include="Microsoft.Azure.Management.ResourceManager.Fluent" Version="1.38.1" />
         <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
         <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="7.0.0" />
         <PackageReference Include="RazorLight" Version="2.3.1" />
@@ -25,7 +27,7 @@
         <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
         <PackageReference Include="RazorEngine.NetCore" Version="3.1.0" />
         <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.7.1" />
-        <PackageReference Include="YamlDotNet" Version="13.5.2" />
+        <PackageReference Include="YamlDotNet" Version="13.7.1" />
     </ItemGroup>
     <ItemGroup>
       <Folder Include="Infrastructure\Presistence\" />
