--- a/Yaml/YamlFile/yaml/secret1.yaml
+++ b/Yaml/YamlFile/yaml/secret1.yaml
@@ -1,12 +1,8 @@
 apiVersion: v1
-kind: Secret
+kind: ConfigMap
 metadata:
-  name: pssql-secret
+  name: postsql-configmap
   namespace: pssql-ns
-  labels:
-    secrets-store.csi.k8s.io/managed: "true"
-    secrets-store.csi.k8s.io/used: "true"
-type: Opaque
-
-#2c2ac4ec-4c6e-4b0f-b3c7-8f1e43a4c529
-#ce39c546-18a5-4362-a4ab-8c5a6ee6e8a9
+data:
+  # 配置数据以键值对形式存储
+  name: "thomaszou"
