--- a/Yaml/YamlFile/yaml/secret.yaml
+++ b/Yaml/YamlFile/yaml/secret.yaml
@@ -9,22 +9,16 @@ spec:
     usePodIdentity: 'false'
     useVMManagedIdentity: 'true'
     tenantId: '1bf2b880-115d-4e08-a258-aa1dc41dc0d5'
-    keyvaultName: test-kv-zy # Azure Key Vault 的名称
+    keyvaultName: test-kv-zy
     userAssignedIdentityID: '277809f3-155d-4b95-b44e-698844918adb' # 页面上的ManagedID
     objects: |
       array:
         - | 
           objectType: secret  
-          objectName: KeyVaultOne   
-#        - |
-#          objectType: secret          
-#          objectName: keyvault-twp       
-#  secretObjects:
-#    - secretName: pssql-secret # Kubernetes Secret 的名称 
-#      type: Opaque
-#      data:
-#        - key: KeyVaultOne  # Kubernetes Secret 中的键
-#          objectName:  KeyVaultOne  # Azure Key Vault 中的秘密名称
-#        - key: keyvault-twp  # Kubernetes Secret 中的键
-#          objectName: keyvault-twp  # Azure Key Vault 中的秘密名称
-  
+          objectName: keyvault-one
+  secretObjects:
+    - secretName: pssql-secret # Kubernetes Secret 的名称 
+      type: Opaque
+      data:
+        - key: KeyVaultOne  # Kubernetes Secret 中的键
+          objectName:  keyvault-one  # Azure Key Vault 中的秘密名称
