--- a/Yaml/Yaml.csproj
+++ b/Yaml/Yaml.csproj
@@ -35,6 +35,7 @@
       <Folder Include="wwwroot\assets\locales\en\" />
       <Folder Include="wwwroot\assets\locales\ja\" />
       <Folder Include="YamlFile\json\" />
+      <Folder Include="YamlFile\yaml\" />
     </ItemGroup>
     <ItemGroup>
       <_ContentIncludedByDefault Remove="Redis\redis-deployment.cshtml" />
