--- a/Yaml/YamlFile/yaml/key.yaml
+++ b/Yaml/YamlFile/yaml/key.yaml
@@ -1,43 +1,96 @@
-apiVersion: secrets-store.csi.x-k8s.io/v1alpha1
+apiVersion: v1
+kind: Service
+metadata:
+  name: cluster-test-svc
+  namespace: test-app-ns
+spec:
+  selector:
+    app:  cluster-test-app
+  ports:
+    - protocol: TCP
+      port: 80
+      targetPort: 8080
+  type: ClusterIP
+---
+apiVersion: secrets-store.csi.x-k8s.io/v1
 kind: SecretProviderClass
 metadata:
-  name: keyvault-spc-zou37
+  name: test-app-keyvault-spc
   namespace: test-app-ns
 spec:
   parameters:
     keyvaultName: kv-saas-core
     objects: |
       array:
-        - |
-          objectType: secret
-          objectName: SendGridKey
-        - |
-          objectType: secret
-          objectName: AzureRedis-pass
-        - |
-          objectType: secret
-          objectName: AzureStorageCert
-        - |
-          objectType: secret
-          objectName: AzureStorageClientId-default
-    tenantId: 1bf2b880-115d-4e08-a258-aa1dc41dc0d5
-    usePodIdentity: 'true'
-    useVMManagedIdentity: 'false'
-    userAssignedIdentityID: 69ab9774-6317-4963-90b4-aea06d941ebd
+        - | 
+          objectType: secret 
+          objectName: KeyVaultOne 
+        - | 
+          objectType: secret 
+          objectName: TiDB-odbc-connector 
+        - | 
+          objectType: secret 
+          objectName: AzureRedis-pass 
+    tenantId: "1bf2b880-115d-4e08-a258-aa1dc41dc0d5"
+    usePodIdentity: "false"
+    useVMManagedIdentity: "true"
+    userAssignedIdentityID: "69ab9774-6317-4963-90b4-aea06d941ebd"
   provider: azure
   secretObjects:
-    - data:
-        - key: SendGridKey
-          objectName: SendGridKey
+    - secretName: test-app-secret
+      type: Opaque
+      data:
+        - key: KeyVaultOne
+          objectName: KeyVaultOne
+        - key: TiDB-odbc-connector
+          objectName: TiDB-odbc-connector
         - key: AzureRedis-pass
           objectName: AzureRedis-pass
-        - key: AzureStorageCert
-          objectName: AzureStorageCert
-        - key: AzureStorageClientId-default
-          objectName: AzureStorageClientId-default
-      secretName: ccflow-secret-zou37
-      type: Opaque
 
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: cluster-test-configmap
+  namespace: test-app-ns
+data:
+  conf: "confna"
+
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: cluster-test-ingress
+  namespace: test-app-ns
+spec:
+  tls:
+    - hosts:
+        - saascore1.thomaszou2077.com
+      secretName: cluster-test-tls-secret
+  rules:
+    - host: saascore1.thomaszou2077.com
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: cluster-test-svc
+                port:
+                  number: 80
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: cluster-test-11-pvc
+  namespace: test-app-ns
+spec:
+  accessModes:
+    - ReadWriteOnce
+  storageClassName: default
+  resources:
+    requests:
+      storage: 1Gi
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -62,51 +115,44 @@ spec:
     spec:
       containers:
         - name: cluster-test
-          image: thomaszy2077/springboot-app:latest
+          image: thomaszy2077/springboot-app:0.0.1
           imagePullPolicy: Always
           env:
-            - name: AutoMailFlg
-              value: '0'
-            - name: SendGridKey
+            - name: conf
+              valueFrom:
+                configMapKeyRef:
+                  name: cluster-test-configmap
+                  key: conf
+            - name: KeyVaultOne
               valueFrom:
                 secretKeyRef:
-                  key: SendGridKey
-                  name: ccflow-secret-zou37
-            - name: AzureRedis_pass
+                  name: test-app-secret
+                  key: KeyVaultOne
+            - name: TiDB-odbc-connector
               valueFrom:
                 secretKeyRef:
-                  key: AzureRedis-pass
-                  name: ccflow-secret-zou37
-            - name: AzureStorageCert_default
-              valueFrom:
-                secretKeyRef:
-                  key: AzureStorageCert
-                  name: ccflow-secret-zou37
-            - name: AzureStorageClientId_default
-              valueFrom:
-                secretKeyRef:
-                  key: AzureStorageClientId-default
-                  name: ccflow-secret-zou37
-            - name: LOGANALYTICS_FLG
-              value: '1'
-            - name: LOGANALYTICS_LOG_DIR
-              value: /app/log
-            - name: LOGANALYTICS_LOG_FILE
-              value: saas-ccflow-backend-zou37.log.json
+                  name: test-app-secret
+                  key: TiDB-odbc-connector
           ports:
             - containerPort: 80
           volumeMounts:
             - mountPath: /mnt/secrets-store
               name: secrets-store-inline
               readOnly: true
+            - mountPath: /dv1
+              name: cluster-test-11-pvc
           resources:
             limits:
               memory: 512Mi
-              cpu: "0.5"
+              cpu: "1"
       volumes:
+        - name: cluster-test-11-pvc
+          persistentVolumeClaim:
+            claimName: cluster-test-11-pvc
         - name: secrets-store-inline
           csi:
             driver: secrets-store.csi.k8s.io
             readOnly: true
             volumeAttributes:
-              secretProviderClass: keyvault-spc-zou37
+              secretProviderClass: test-app-keyvault-spc
+        
