--- a/Yaml/YamlFile/yaml/secret.yaml
+++ b/Yaml/YamlFile/yaml/secret.yaml
@@ -6,8 +6,8 @@ metadata:
 spec:
   provider: azure
   parameters:
-    usePodIdentity: 'false'
-    useVMManagedIdentity: 'true'
+    usePodIdentity: 'true'
+    useVMManagedIdentity: 'false'
     tenantId: '1bf2b880-115d-4e08-a258-aa1dc41dc0d5'
     keyvaultName: test-kv-zy
     userAssignedIdentityID: '277809f3-155d-4b95-b44e-698844918adb' # 页面上的ManagedID
